--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
 	<h4>Hello World!</h4>
 	<h5>Hello World!</h5>
 	<h6>Hello World!</h6>
+	<header>  
+<nav>  
+<ul>  
+<li>  
+<a href="#"> Home </a>  
+</li>  
+<li>  
+<a href="#"> About </a>  
+</li>  
+<li>  
+<a href="#"> Contact </a>  
+</li>  
+<li> <a href="#"> Terms of use </a>  
+</li>  
+<li>  
+<a href="#"> Join Us </a>  
+</li>  
+</ul>  
+</nav>  
+</header>  
+You are at JavaTpoint Site.....  
 </body>
 
 </html>
